--- a/Exercise 3.html
+++ b/Exercise 3.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <h1>You can hear the song from here</h1>
+    <marquee behavior="" direction="">
+        <h1>You can hear the song from here</h1>
+    </marquee>
     <a href="https://www.youtube.com/watch?v=3gK_2XdjOdY">Best song</a>
     <hr>
 
