--- a/Student registration Form.html
+++ b/Student registration Form.html
@@ -19,7 +19,8 @@
         <input type="text" name="firstname" placeholder="First name"> (max 30 characters a-z and A-Z)<br> Last name: <br>
         <input type="text" name="lastname" placeholder="Family Name"> (max 30 characters a-z and A-Z)<br> Date Of Birth: <br>
         <input type="date" date="Date Of Birth" placeholder="Date Of Birth"><br> Email ID: <br>
-        <input type="email" Email="Email ID" placeholder="Example...@"><br> Mobile Number: <br>
+        <input type="email" Email="Email ID" placeholder="Example...@"><br><br> Upload your file
+        <input type="file" name="file" placeholder="file"><br><br> Mobile Number: <br>
         <input type="tel" Email="tel" placeholder="+43......">(10 digit number) <br> Select gender:
         <input type="radio" name="gender" value="male" checked> Male
         <input type="radio" name="gender" value="female"> Female
