--- a/excercise4.html
+++ b/excercise4.html
@@ -4,10 +4,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Titanic</title>
+    <style>
+        ul.menu  {
+          display:inline;
+          display: flex;
+        }
+        </style>
 </head>
 <body>
    <header>
-       <marquee behavior="10" direction=""><img src="TITANIC.jpg" alt="image" width="100%" height="20%"></marquee><br>
+       <marquee behavior="10" direction=""><img src="images/TITANIC.jpg" alt="image" width="100%" height="20%"></marquee><br><br>
         <a href="https://en.wikipedia.org/wiki/Titanic_(1997_film)#Release">Wikipedia</a> &nbsp;
         <a href="https://www.imdb.com/title/tt0120338/">IMDb</a> &nbsp;
         <a href="Exercise 3.html">Song</a>
@@ -22,12 +28,32 @@
        </section>
     <section>
         <h1>Cast:</h1>
-        <ul>
-            <li>Leonardo DiCaprio</li>
-            <li>Kate Winslet</li>
-            <li>Billy Zane</li>
-            <li>Frances Fisher</li>
-            <li>Gloria Stuart </li>
+        <ul class="menu" style="list-style-type:none;" >
+            <li><figure>
+                <img src="images/Leonardo diCaprio.jpg" alt="Trulli" style="width:5% height:5%">
+                <figcaption>Leonardo diCaprio</figcaption>
+              </figure>
+            </li>
+            <li><figure>
+                <img src="images/Kate Winslet.jpg" alt="Trulli" style="width:5% height:5%">
+                <figcaption>Kate Winslet</figcaption>
+                </figure>
+            </li>
+            <li><figure>
+                <img src="images/Billy Zane.jpg" alt="Trulli" style="width:5% height:5%">
+                <figcaption>Billy Zane</figcaption>
+                </figure>
+            </li>
+            <li><figure>
+                <img src="images/Frances Fisher.jpg" alt="Trulli" style="width:5% height:5%">
+                <figcaption>Frances Fisher</figcaption>
+                </figure>
+            </li>
+            <li><figure>
+                <img src="images/Gloria Stuart.jpg" alt="Trulli" style="width:5% height:5%">
+                <figcaption>Gloria Stuart</figcaption>
+                </figure>
+            </li>
         </ul>
     </section>
     <section>
